--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fantastic-app",
   "version": "0.1.0",
-  "description": "React project for GCI 2019",
+  "description": "A React project for GCI 2019",
   "repository": "https://github.com/Jvldwin/React-GCI",
   "private": true,
   "dependencies": {
